--- a/References.bib
+++ b/References.bib
@@ -48,7 +48,6 @@
 	volume = {10},
 	issn = {1878-7568},
 	doi = {10.1016/j.actbio.2014.07.005},
-	abstract = {In recent years, much progress has been made on the development of biodegradable magnesium alloys as "smart" implants in cardiovascular and orthopedic applications. Mg-based alloys as biodegradable implants have outstanding advantages over Fe-based and Zn-based ones. However, the extensive applications of Mg-based alloys are still inhibited mainly by their high degradation rates and consequent loss in mechanical integrity. Consequently, extensive studies have been conducted to develop Mg-based alloys with superior mechanical and corrosion performance. This review focuses on the following topics: (i) the design criteria of biodegradable materials; (ii) alloy development strategy; (iii) in vitro performances of currently developed Mg-based alloys; and (iv) in vivo performances of currently developed Mg-based implants, especially Mg-based alloys under clinical trials.},
 	language = {eng},
 	number = {11},
 	journal = {Acta Biomaterialia},
@@ -65,7 +64,6 @@
 	volume = {18},
 	issn = {1557-2501},
 	shorttitle = {Biodegradable stents},
-	abstract = {Despite the development and progression of metallic stents, many concerns still remain because of their permanent nature. Although metallic stents are effective in preventing recoil and late restenosis after coronary angioplasty, they continue to have limitations such as stent thrombosis and mismatch of the stent to the vessel size. Thus, the concept of bioabsorbable stents has emerged as an alternative to permanent metal stents. This review will outline concepts, material designs, preclinical, and initial clinical experimental studies with bioabsorbable stents.},
 	language = {eng},
 	number = {2},
 	journal = {The Journal of Invasive Cardiology},
@@ -83,7 +81,6 @@
 	issn = {0142-9612},
 	shorttitle = {Magnesium and its alloys as orthopedic biomaterials},
 	doi = {10.1016/j.biomaterials.2005.10.003},
-	abstract = {As a lightweight metal with mechanical properties similar to natural bone, a natural ionic presence with significant functional roles in biological systems, and in vivo degradation via corrosion in the electrolytic environment of the body, magnesium-based implants have the potential to serve as biocompatible, osteoconductive, degradable implants for load-bearing applications. This review explores the properties, biological performance, challenges and future directions of magnesium-based biomaterials.},
 	language = {eng},
 	number = {9},
 	journal = {Biomaterials},
@@ -148,11 +145,6 @@
 	issn = {1474-547X},
 	shorttitle = {Safety and performance of the second-generation drug-eluting absorbable metal scaffold in patients with de-novo coronary artery lesions ({BIOSOLVE}-{II})},
 	doi = {10.1016/S0140-6736(15)00447-X},
-	abstract = {BACKGROUND: Absorbable scaffolds were designed to overcome the limitations of conventional, non-absorbable metal-based drug-eluting stents. So far, only polymeric absorbable scaffolds are commercially available. We aimed to assess the safety and performance of a novel second-generation drug-eluting absorbable metal scaffold (DREAMS 2G) in patients with de-novo coronary artery lesions.
-METHODS: We did this prospective, multicentre, non-randomised, first-in-man trial at 13 percutaneous coronary intervention centres in Belgium, Brazil, Denmark, Germany, Singapore, Spain, Switzerland, and the Netherlands. Eligible patients had stable or unstable angina or documented silent ischaemia, and a maximum of two de-novo lesions with a reference vessel diameter between 2·2 mm and 3·7 mm. Clinical follow-up was scheduled at months 1, 6, 12, 24, and 36. Patients were scheduled for angiographic follow-up at 6 months, and a subgroup of patients was scheduled for intravascular ultrasound, optical coherence tomography, and vasomotion assessment. All patients were recommended to take dual antiplatelet treatment for at least 6 months. The primary endpoint was in-segment late lumen loss at 6 months. We did analysis by intention to treat. This trial is registered with ClinicalTrials.gov, number NCT01960504.
-FINDINGS: Between Oct 8, 2013, and May 22, 2015, we enrolled 123 patients with 123 coronary target lesions. At 6 months, mean in-segment late lumen loss was 0·27 mm (SD 0·37), and angiographically discernable vasomotion was documented in 20 (80\%) of 25 patients. Intravascular ultrasound assessments showed a preservation of the scaffold area (mean 6·24 mm(2) [SD 1·15] post-procedure vs 6·21 mm(2) [1·22] at 6 months) with a low mean neointimal area (0·08 mm(2) [0·09]), and optical coherence tomography did not detect any intraluminal mass. Target lesion failure occurred in four (3\%) patients: one ({\textless}1\%) patient died from cardiac death, one ({\textless}1\%) patient had periprocedural myocardial infarction, and two (2\%) patients needed clinically driven target lesion revascularisation. No definite or probable scaffold thrombosis was observed.
-INTERPRETATION: Our findings show that implantation of the DREAMS 2G device in de-novo coronary lesions is feasible, with favourable safety and performance outcomes at 6 months. This novel absorbable metal scaffold could be an alternative to absorbable polymeric scaffolds for treatment of obstructive coronary disease.
-FUNDING: Biotronik AG.},
 	language = {eng},
 	number = {10013},
 	journal = {Lancet (London, England)},
@@ -217,4 +209,14 @@ FUNDING: Biotronik AG.},
   pages={341--349},
   year={2015},
   publisher={Wiley Online Library}
+}
+
+@article{YU2017330,
+title = "In vitro and in vivo evaluation of MgF2 coated AZ31 magnesium alloy porous scaffolds for bone regeneration",
+journal = "Colloids and Surfaces B: Biointerfaces",
+volume = "149",
+pages = "330 - 340",
+year = "2017",
+issn = "0927-7765",
+author = "Weilin Yu and Huakun Zhao and Zhenyu Ding and Zhiwang Zhang and Benben Sun and Ji Shen and Shanshan Chen and Bingchun Zhang and Ke Yang and Meixia Liu and Daoyun Chen and Yaohua He",
 }
