--- a/EuCAP2019_template.tex
+++ b/EuCAP2019_template.tex
@@ -79,29 +79,29 @@
 
 
 % *** MISC UTILITY PACKAGES ***
-%
-%\usepackage{ifpdf}
-% Heiko Oberdiek's ifpdf.sty is very useful if you need conditional
-% compilation based on whether the output is pdf or dvi.
-% usage:
-% \ifpdf
-%   % pdf code
-% \else
-%   % dvi code
-% \fi
-% The latest version of ifpdf.sty can be obtained from:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/oberdiek/
-% Also, note that IEEEtran.cls V1.7 and later provides a builtin
-% \ifCLASSINFOpdf conditional that works the same way.
-% When switching from latex to pdflatex and vice-versa, the compiler may
-% have to be run twice to clear warning/error messages.
+\usepackage[cmex10]{amsmath}
 \usepackage{xcolor}
 \usepackage{siunitx}
 \sisetup{range-phrase=--}
-
-
-
-
+\DeclareSIUnit\year{yr}
+\usepackage{booktabs}
+\usepackage{float}
+\usepackage{newtxtext,newtxmath}
+% \usepackage{geometry} % just not to bother with the table width
+\usepackage{graphicx}
+% \usepackage{filecontents}
+\usepackage{tabularx,colortbl}
+\usepackage{booktabs}
+\usepackage{pgfplots}
+\usepackage{standalone}
+\usepackage{tikz}
+\tikzset{
+font={\fontsize{8pt}{8}\selectfont}}
+\usepackage{tikzscale} % Scale the figure not the font
+\pgfplotsset{compat=newest}
+\usepackage{physics}
+\usepackage{chemfig}
+\usepackage[version=3]{mhchem}
 
 % *** CITATION PACKAGES ***
 %
@@ -120,230 +120,6 @@
 % The latest version can be obtained at:
 % http://www.ctan.org/tex-archive/macros/latex/contrib/cite/
 % The documentation is contained in the cite.sty file itself.
-
-
-
-
-
-
-% *** GRAPHICS RELATED PACKAGES ***
-%
-\ifCLASSINFOpdf
-  \usepackage[pdftex]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../pdf/}{../jpeg/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
-\else
-  % or other class option (dvipsone, dvipdf, if not using dvips). graphicx
-  % will default to the driver specified in the system graphics.cfg if no
-  % driver is specified.
-  % \usepackage[dvips]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../eps/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.eps}
-\fi
-% graphicx was written by David Carlisle and Sebastian Rahtz. It is
-% required if you want graphics, photos, etc. graphicx.sty is already
-% installed on most LaTeX systems. The latest version and documentation can
-% be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/required/graphics/
-% Another good source of documentation is "Using Imported Graphics in
-% LaTeX2e" by Keith Reckdahl which can be found as epslatex.ps or
-% epslatex.pdf at: http://www.ctan.org/tex-archive/info/
-%
-% latex, and pdflatex in dvi mode, support graphics in encapsulated
-% postscript (.eps) format. pdflatex in pdf mode supports graphics
-% in .pdf, .jpeg, .png and .mps (metapost) formats. Users should ensure
-% that all non-photo figures use a vector format (.eps, .pdf, .mps) and
-% not a bitmapped formats (.jpeg, .png). IEEE frowns on bitmapped formats
-% which can result in "jaggedy"/blurry rendering of lines and letters as
-% well as large increases in file sizes.
-%
-% You can find documentation about the pdfTeX application at:
-% http://www.tug.org/applications/pdftex
-
-
-
-
-
-% *** MATH PACKAGES ***
-%
-\usepackage[cmex10]{amsmath}
-% A popular package from the American Mathematical Society that provides
-% many useful and powerful commands for dealing with mathematics. If using
-% it, be sure to load this package with the cmex10 option to ensure that
-% only type 1 fonts will utilized at all point sizes. Without this option,
-% it is possible that some math symbols, particularly those within
-% footnotes, will be rendered in bitmap form which will result in a
-% document that can not be IEEE Xplore compliant!
-%
-% Also, note that the amsmath package sets \interdisplaylinepenalty to 10000
-% thus preventing page breaks from occurring within multiline equations. Use:
-%\interdisplaylinepenalty=2500
-% after loading amsmath to restore such page breaks as IEEEtran.cls normally
-% does. amsmath.sty is already installed on most LaTeX systems. The latest
-% version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/required/amslatex/math/
-
-
-
-
-
-% *** SPECIALIZED LIST PACKAGES ***
-%
-%\usepackage{algorithmic}
-% algorithmic.sty was written by Peter Williams and Rogerio Brito.
-% This package provides an algorithmic environment fo describing algorithms.
-% You can use the algorithmic environment in-text or within a figure
-% environment to provide for a floating algorithm. Do NOT use the algorithm
-% floating environment provided by algorithm.sty (by the same authors) or
-% algorithm2e.sty (by Christophe Fiorio) as IEEE does not use dedicated
-% algorithm float types and packages that provide these will not provide
-% correct IEEE style captions. The latest version and documentation of
-% algorithmic.sty can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/algorithms/
-% There is also a support site at:
-% http://algorithms.berlios.de/index.html
-% Also of interest may be the (relatively newer and more customizable)
-% algorithmicx.sty package by Szasz Janos:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/algorithmicx/
-
-
-
-
-% *** ALIGNMENT PACKAGES ***
-%
-%\usepackage{array}
-% Frank Mittelbach's and David Carlisle's array.sty patches and improves
-% the standard LaTeX2e array and tabular environments to provide better
-% appearance and additional user controls. As the default LaTeX2e table
-% generation code is lacking to the point of almost being broken with
-% respect to the quality of the end results, all users are strongly
-% advised to use an enhanced (at the very least that provided by array.sty)
-% set of table tools. array.sty is already installed on most systems. The
-% latest version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/required/tools/
-
-
-%\usepackage{mdwmath}
-%\usepackage{mdwtab}
-% Also highly recommended is Mark Wooding's extremely powerful MDW tools,
-% especially mdwmath.sty and mdwtab.sty which are used to format equations
-% and tables, respectively. The MDWtools set is already installed on most
-% LaTeX systems. The lastest version and documentation is available at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/mdwtools/
-
-
-% IEEEtran contains the IEEEeqnarray family of commands that can be used to
-% generate multiline equations as well as matrices, tables, etc., of high
-% quality.
-
-
-%\usepackage{eqparbox}
-% Also of notable interest is Scott Pakin's eqparbox package for creating
-% (automatically sized) equal width boxes - aka "natural width parboxes".
-% Available at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/eqparbox/
-
-
-
-
-
-% *** SUBFIGURE PACKAGES ***
-%\usepackage[tight,footnotesize]{subfigure}
-% subfigure.sty was written by Steven Douglas Cochran. This package makes it
-% easy to put subfigures in your figures. e.g., "Figure 1a and 1b". For IEEE
-% work, it is a good idea to load it with the tight package option to reduce
-% the amount of white space around the subfigures. subfigure.sty is already
-% installed on most LaTeX systems. The latest version and documentation can
-% be obtained at:
-% http://www.ctan.org/tex-archive/obsolete/macros/latex/contrib/subfigure/
-% subfigure.sty has been superceeded by subfig.sty.
-
-
-
-%\usepackage[caption=false]{caption}
-%\usepackage[font=footnotesize]{subfig}
-% subfig.sty, also written by Steven Douglas Cochran, is the modern
-% replacement for subfigure.sty. However, subfig.sty requires and
-% automatically loads Axel Sommerfeldt's caption.sty which will override
-% IEEEtran.cls handling of captions and this will result in nonIEEE style
-% figure/table captions. To prevent this problem, be sure and preload
-% caption.sty with its "caption=false" package option. This is will preserve
-% IEEEtran.cls handing of captions. Version 1.3 (2005/06/28) and later
-% (recommended due to many improvements over 1.2) of subfig.sty supports
-% the caption=false option directly:
-%\usepackage[caption=false,font=footnotesize]{subfig}
-%
-% The latest version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/subfig/
-% The latest version and documentation of caption.sty can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/caption/
-
-
-
-
-% *** FLOAT PACKAGES ***
-%
-%\usepackage{fixltx2e}
-% fixltx2e, the successor to the earlier fix2col.sty, was written by
-% Frank Mittelbach and David Carlisle. This package corrects a few problems
-% in the LaTeX2e kernel, the most notable of which is that in current
-% LaTeX2e releases, the ordering of single and double column floats is not
-% guaranteed to be preserved. Thus, an unpatched LaTeX2e can allow a
-% single column figure to be placed prior to an earlier double column
-% figure. The latest version and documentation can be found at:
-% http://www.ctan.org/tex-archive/macros/latex/base/
-
-
-
-%\usepackage{stfloats}
-% stfloats.sty was written by Sigitas Tolusis. This package gives LaTeX2e
-% the ability to do double column floats at the bottom of the page as well
-% as the top. (e.g., "\begin{figure*}[!b]" is not normally possible in
-% LaTeX2e). It also provides a command:
-%\fnbelowfloat
-% to enable the placement of footnotes below bottom floats (the standard
-% LaTeX2e kernel puts them above bottom floats). This is an invasive package
-% which rewrites many portions of the LaTeX2e float routines. It may not work
-% with other packages that modify the LaTeX2e float routines. The latest
-% version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/sttools/
-% Documentation is contained in the stfloats.sty comments as well as in the
-% presfull.pdf file. Do not use the stfloats baselinefloat ability as IEEE
-% does not allow \baselineskip to stretch. Authors submitting work to the
-% IEEE should note that IEEE rarely uses double column equations and
-% that authors should try to avoid such use. Do not be tempted to use the
-% cuted.sty or midfloat.sty packages (also by Sigitas Tolusis) as IEEE does
-% not format its papers in such ways.
-
-
-
-
-
-% *** PDF, URL AND HYPERLINK PACKAGES ***
-%
-%\usepackage{url}
-% url.sty was written by Donald Arseneau. It provides better support for
-% handling and breaking URLs. url.sty is already installed on most LaTeX
-% systems. The latest version can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/misc/
-% Read the url.sty source comments for usage information. Basically,
-% \url{my_url_here}.
-
-
-
-
-
-% *** Do not adjust lengths that control margins, column widths, etc. ***
-% *** Do not use packages that alter fonts (such as pslatex).         ***
-% There should be no need to do such things with IEEEtran.cls V1.6 and later.
-% (Unless specifically asked to do so by the journal or conference you plan
-% to submit to, of course. )
 
 
 % correct bad hyphenation here
@@ -381,7 +157,7 @@ Department of Pediatric Cardiology, Sidra Medicine}
 \IEEEauthorblockA{\IEEEauthorrefmark{4}% 4th affiliations
 Department of MEEN, Texas A\&M University at Qatar,
 }
- \IEEEauthorblockA{ \emph{hasan.abbas@qatar.tamu.edu} }
+\IEEEauthorblockA{ \emph{hasan.abbas@qatar.tamu.edu} }
 }
 
 % conference papers do not typically use \thanks and this command
@@ -402,8 +178,8 @@ Department of MEEN, Texas A\&M University at Qatar,
 
 
 \begin{abstract}
-%\boldmath
-In this paper, we propose a corrosion monitoring scheme for the absorbable cardiovascular stents composed of magnesium alloys. We show that the structural integrity of such mesh-type tubular stents can be evaluated using millimeter-scale electromagnetic waves. The electromagnetic scattering from the simulation results indicates that the resonant frequency decreases as the structure thickness degrades with time.
+  %\boldmath
+  In this paper, we propose a corrosion monitoring scheme for the absorbable cardiovascular stents composed of magnesium alloys. We show that the structural integrity of such mesh-type tubular stents can be evaluated using millimeter-scale electromagnetic waves. With the passage of time, the strut thickness of the stent decreases due to corrosion which is subsequently observed in terms of a frequency shift in the simulated scattering response.
 \end{abstract}
 % IEEEtran.cls defaults to using nonbold math in the Abstract.
 % This preserves the distinction between vectors and scalars. However,
@@ -433,60 +209,78 @@ In this paper, we propose a corrosion monitoring scheme for the absorbable cardi
 % no \IEEEPARstart
 Cardiovascular disease (CVD) is the leading cause of death worldwide, and it accounted for an estimated 30\% of all deaths in the year 2013 globally \cite{benjamin_heart_2017}. Clogging of the heart vessels is the biggest factor responsible for the development of the CVD. These days, it is a common clinical practice to reopen the heart vessels through balloon angioplasty, and place a mesh-type metallic scaffolding tube called a stent to reinforce the vessel walls.  However, due to the long-standing presence of a metallic foreign object in the form of a stent, serious health complications arise chief among which is the reclogging of the vessels in the long term, especially in the vicinity of the stent. From a medical perspective, an ideal stent would be the one that serves its purpose of reopening and stabilizing the heart vessels and then disappear \cite{waksman_biodegradable_2006}.  The biodegradable stents  precisely offer such a possibility where the scaffold structure completely corrode away after performing the reinforcement of the heart vessel walls \cite{hou_review_2016}.
 
-Biodegradable polymers and metals is an active research area nowadays. Due to the vastly superior mechanical properties, metals are therefore more suitable for medical implants \cite{chen_recent_2014}. Among metals, iron, zinc and magnesium-based alloys have shown promise for degradable stent applications, but as of today, only Mg-based biodegradable stents have been clinically tested in humans \cite{staiger_magnesium_2006,esmaily_fundamentals_2017}. The mechanical properties of Mg such as elasticity closely resemble the human bone \cite{hermawan2018updates} and with the help of alloying, further attractive characteristics can be achieved. More importantly, Mg can be metabolized by the body and is also vital in maintaining a healthy heart, and given the weight of a typical coronary stent is in the range of \SIrange{3}{5}{\mg}, the release of Mg ions is unlikely to cause any adverse toxic effects.
+Biodegradable polymers and metals is an active research area nowadays. Due to the vastly superior mechanical properties, metals are therefore more suitable for medical implants \cite{chen_recent_2014}. Among metals, iron, zinc and magnesium-based alloys have shown promise for degradable stent applications, but as of today, only Mg-based biodegradable stents have been clinically tested in humans \cite{staiger_magnesium_2006,esmaily_fundamentals_2017}. The mechanical properties of Mg such as elasticity closely resemble the human bone \cite{hermawan2018updates} and with the help of alloying, further attractive characteristics can be achieved. More importantly, Mg can be metabolized by the body through the chemical reaction,
+%
+\begin{align} \notag
+  \ce{Mg + H_2O -> Mg^{2+} + 2OH^{-} + H2}
+\end{align}
+%
+and is also vital in maintaining a healthy heart, and given the weight of a typical
+coronary stent is in the range of \SIrange{3}{5}{\mg}, the release of Mg ions is unlikely to cause any adverse toxic effects.
 
 One of the biggest engineering challenges presented with the use of an absorbable stent is ensuring its structural integrity until the stent completely breaks down by being metabolized in to the bloodstream. In view of this, it is critical to monitor the stent and its absorption due to corrosion need, preferably through non-invasive means. In this paper, we propose an electromagnetic monitoring scheme that monitors the structural integrity of a biodegradable stent using millimeter waves (mm-waves). Compared to the microwave wave imaging, mm-wave provides higher spatial resolution. On the other hand, mm-waves can penetrate deeper into the human tissue compared with the optical frequency counterparts. Using full-wave 3D electromagnetic simulations, we show that the stent corrosion can be correlated to the frequency shift in the backscattering properties.
-
+%
+\begin{figure}[b!]
+  \centering
+  \includegraphics[width=3.5in]{Stent.PNG}
+  \caption{An open stent design in the expanded state}
+  \label{fig:stent}
+\end{figure}
+%
 \vspace{7pt}
 \section{Methodology}
 %
-Here we simulate a full-scale model of a magnesium cardiovascular stent and monitor the corrosion using the  was shown in \cite{bowen2015rates} that the corrosion rate $P$, for a wire like structure is independent of length and can be completely described in terms of the radius $r(t)$ of the wire at any given time $t$ by,
+We simulate a three dimensional model of a magnesium cardiovascular stent and monitor the corrosion through the millimeter electromagnetic backscattering. The simulations were carried out using the frequency domain solver of CST Microwave Studio.  For a stent composed of a mesh of wires as shown in Fig. \ref{fig:stent}, the corrosion only affects the cross-sectional area of the wire and it is independent of the length of the structure \cite{bowen2015rates}. The corrosion rate $P$ of a wire with an initial radius $r_0$, at any given time $t$ is,
 %
 \begin{equation}
-  P = \frac{r_0 - r(t)}{t}
+  P = \dv{r}{t} = \frac{r_0 - r(t)}{t}
   \label{eq:corrosion}
 \end{equation}
 %
-where $r_0$ is the initial wire radius. For a magnesium wire, an in-vivo penetration corrosion rate of \SI{500}{\um \per \year} would
-To simulate the scattering properties of an absorbable cardiovascular stent, we used the \emph{Open stents} CAD models that are customizable due to their inherent parameterization \cite{bonsignore_open_2012}. The stent length was set to \SI{25}{\mm} with the diameter in the expanded form equal to \SI{4}{\mm}, as shown in Fig. \ref{fig:stent}. The stent strut thickness was initially set to \SI{170}{\um}.
+where $r(t)$ is the wire radius at time $t$.
+%
+In this paper, we used the \emph{Open stents} CAD model which is fully customizable due to its inherent parameterization \cite{bonsignore_open_2012}. The stent length was set to \SI{25}{\mm} with the diameter in the expanded state equal to \SI{4}{\mm}. The stent strut thickness was initially set to \SI{.2}{\mm}. Using \eqref{eq:corrosion}, a penetration corrosion rate of \SI{1.94}{\mm \per \year} for a magnesium alloy (AZ31) \cite{YU2017330} would leave behind \SI{.125}{\mm} thick wire after a \num{2} weeks period, and considering $P$ as uniform, the structure will be completely absorbed after \num{6} weeks.
+%
+We simulated the scattering response by progressively decreasing the strut thickness of the stent. To reduce the computational cost, we assumed the background material as free space. A point dipole was used to create the excitation signal.
+%
 \begin{figure}[h!]
-\centering
-\includegraphics[width=2.5in]{Stent.PNG}
-\caption{An open stent design in the expanded state}
-\label{fig:stent}
+  \centering
+  \includegraphics[width=.85\linewidth]{stent_scattering.tex}
+  \caption{Backscattering for different strut thicknesses}
+  \label{fig:bcs}
 \end{figure}
 %
 %
-%\begin{table}[!t]
-%% increase table row spacing, adjust to taste
-%\renewcommand{\arraystretch}{1.3}
-% if using array.sty, it might be a good idea to tweak the value of
-% \extrarowheight as needed to properly center the text within the cells
-%\caption{An Example of a Table}
-%\label{table_example}
-%\centering
-%% Some packages, such as MDW tools, offer better commands for making tables
-%% than the plain LaTeX2e tabular which is used here.
-%\begin{tabular}{|c||c|}
-%\hline
-%One & Two\\
-%\hline
-%Three & Four\\
-%\hline
-%\end{tabular}
-%\end{table}
+%
+\vspace{7pt}
+\section{Results and Discussion}
+%
+Figure \ref{fig:bcs} shows the backscattering from the open stent model described earlier with varying thicknesses. Although it is well known that the resonant frequency of a dipole antenna is only dependent upon the length, however, the electromagnetics of meshed structures such as the stent is complex due to its partially transparent nature to the wave. Table \ref{tab:resonance} lists the resonant frequencies extracted from Fig. \ref{fig:bcs}, and interestingly, a linearly decreasing frequency shift is observed as the stent is progressively corroded.
+%
+\begin{table}[!h]
+  \centering
+  \renewcommand{\arraystretch}{1.3}
+  \caption{Effect of thickness on the resonant frequency}
+  \centering
+  \begin{tabularx}{.65\columnwidth}{c c}
+    \toprule
+    Thickness (mm) & Resonant Frequency (GHz)\\
+    \midrule \midrule
+    \num{0.2} & \num{237.2} \\
+    \num{0.075} & \num{230.2} \\
+    \num{0.02} & \num{227} \\
+    \bottomrule \\
+  \end{tabularx}
+  \label{tab:resonance}
+\end{table}
+%
 
 \vspace{7pt}
 \section{Conclusion}
 %
-For all further questions please read first the WORD template that is also provided on the EuCAP 2019 website, before consulting the local organising committee.
-
-
-
-
+In this paper, we presented a non-invasive technique to progressively monitor the degradation of a magnesium based bio-absorbable cardiovascular stent using millimeter waves.
+The proposed frequency range can provide sufficient spatial resolution and penetration without applying any radiation damage to the tissue. The fast corrosion rate of magnesium based biomaterials points to great potentials in designing cardiovascular stents. However, question marks on the structural integrity and corrosion remnants have restricted their popularization. In this preliminary report, we addressed some of these concerns by proposing a corrosion monitoring scheme that can non-invasively track the structural degradation by observing the frequency shift in the electromagnetic scattering.
 % conference papers do not normally have an appendix
-
-
 % use section* for acknowledgement
 \vspace{7pt}
 \section*{Acknowledgment}
