--- a/EuCAP2019_template.tex
+++ b/EuCAP2019_template.tex
@@ -209,7 +209,7 @@ Department of MEEN, Texas A\&M University at Qatar,
 % no \IEEEPARstart
 Cardiovascular disease (CVD) is the leading cause of death worldwide, and it accounted for an estimated 30\% of all deaths in the year 2013 globally \cite{benjamin_heart_2017}. Clogging of the heart vessels is the biggest factor responsible for the development of the CVD. These days, it is a common clinical practice to reopen the heart vessels through balloon angioplasty, and place a mesh-type metallic scaffolding tube called a stent to reinforce the vessel walls.  However, due to the long-standing presence of a metallic foreign object in the form of a stent, serious health complications arise chief among which is the reclogging of the vessels in the long term, especially in the vicinity of the stent. From a medical perspective, an ideal stent would be the one that serves its purpose of reopening and stabilizing the heart vessels and then disappear \cite{waksman_biodegradable_2006}.  The biodegradable stents  precisely offer such a possibility where the scaffold structure completely corrode away after performing the reinforcement of the heart vessel walls \cite{hou_review_2016}.
 
-Biodegradable polymers and metals is an active research area nowadays. Due to the vastly superior mechanical properties, metals are therefore more suitable for medical implants \cite{chen_recent_2014}. Among metals, iron, zinc and magnesium-based alloys have shown promise for degradable stent applications, but as of today, only Mg-based biodegradable stents have been clinically tested in humans \cite{staiger_magnesium_2006,esmaily_fundamentals_2017}. The mechanical properties of Mg such as elasticity closely resemble the human bone \cite{hermawan2018updates} and with the help of alloying, further attractive characteristics can be achieved. More importantly, Mg can be metabolized by the body through the chemical reaction,
+Biodegradable polymers and metals is an active research area nowadays. Due to the vastly superior mechanical properties, metals are considered more suitable for medical implants \cite{chen_recent_2014}. Among metals, iron, zinc and magnesium-based alloys have shown promise for degradable stent applications, but as of today, only Mg-based biodegradable stents have been clinically tested in humans \cite{staiger_magnesium_2006,esmaily_fundamentals_2017}. The mechanical properties of Mg such as elasticity closely resemble the human bone \cite{hermawan2018updates} and with the help of alloying, further attractive characteristics can be achieved. More importantly, Mg can be metabolized by the body through the chemical reaction,
 %
 \begin{align} \notag
   \ce{Mg + H_2O -> Mg^{2+} + 2OH^{-} + H2}
